Fixed scrollbars

--- a/frontend/src/components/IssueList.css
+++ b/frontend/src/components/IssueList.css
@@ -45,6 +45,7 @@
 }
 
 .list-of-issues-wrapper {
+  max-height: 700px;
   min-height: 1vh;
   overflow-y: scroll;
 }
