--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,6 +39,7 @@
 
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -55,11 +56,6 @@ body {
   display: flex;
   flex-direction: column;
   background-color: var(--main-bg);
-  overflow-y: hidden;
-}
-
-.modal {
-  overflow-y: hidden;
 }
 
 /* width */
