--- a/frontend/src/pages/Container.css
+++ b/frontend/src/pages/Container.css
@@ -1,4 +1,5 @@
 .userContainer {
+  overflow: hidden;
   margin-bottom: 0;
   color: var(--main-fg);
   width: 100%;
